--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,6 +29,7 @@
 
     /* Modules */
     "module": "commonjs" /* Specify what module code is generated. */,
+    "outDir": "./dist" /* Specify  a directorty for compile  js file*/,
     // "rootDir": "./",                                  /* Specify the root folder within your source files. */
     // "moduleResolution": "node10",                     /* Specify how TypeScript looks up a file from a given module specifier. */
     // "baseUrl": "./",                                  /* Specify the base directory to resolve non-relative module names. */
